# Secret_santa

./: .gitignore  main.py  pyproject.toml  smtp.py  utils.py
