[tool.poetry]
name = "secret santa"
version = "0.1.0"
description = ""
authors = ["jean Bertholat <jean.bertholat@alten.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.41.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
